panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_add_signed_char.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_add_signed_char.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_add_signed_char.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `signed char` (truncate `signed char` (90 `int`)))
         (definition b~3 `signed char` (truncate `signed char` (110 `int`)))
         (definition result~4 `int` (add `int` (sign-extend `int` (a~2 `signed char`)) (sign-extend `int` (b~3 `signed char`))))
         (return (result~4 `int`)))))

----- stderr -----
