panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_addition.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_addition.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (add `int` (add `int` (add `int` (1 `int`) (1 `int`)) (1 `int`)) (2 `int`))))))

----- stderr -----
