panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_argc.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_argc.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_argc.c"
   (function-definition external
      main~0 `fn(argc: int, ∅: ptr<ptr<char>>) -> int`
      (params
         argc~2 `int`
         main.unnamed_parameter.1~3 `ptr<ptr<char>>`)
      (compound-statement
         (return (argc~2 `int`)))))

----- stderr -----
