panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_argv.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_argv.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_argv.c"
   (declaration external strlen~0 `fn(∅: ptr<char const>) -> unsigned long` ∅)
   (function-definition external
      main~1 `fn(argc: int, argv: ptr<ptr<char>>) -> int`
      (params
         argc~3 `int`
         argv~4 `ptr<ptr<char>>`)
      (compound-statement
         (return
            (truncate `int`
               (call `unsigned long`
                  (addressof `ptr<fn(∅: ptr<char const>) -> unsigned long>`
                     (strlen~0 `fn(∅: ptr<char const>) -> unsigned long`))
                  (noop-type-conversion `ptr<char const>` (deref `ptr<char>` (ptr-add `ptr<ptr<char>>` (argv~4 `ptr<ptr<char>>`) (sign-extend `long` (1 `int`)))))))))))

----- stderr -----
