panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_assignment_from_parenthesised_implicit_conversion.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_assignment_from_parenthesised_implicit_conversion.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_assignment_from_parenthesised_implicit_conversion.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `unsigned int` (noop-type-conversion `unsigned int` (27 `int`)))
         (expression (assign `unsigned int` (a~2 `unsigned int`) (noop-type-conversion `unsigned int` (42 `int`))))
         (return (noop-type-conversion `int` (a~2 `unsigned int`))))))

----- stderr -----
