panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__test_char_local_variable.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/test_char_local_variable.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_char_local_variable.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `char` (truncate `char` (1 `int`)))
         (definition b~3 `char` (truncate `char` (27 `int`)))
         (definition c~4 `char` (truncate `char` (3 `int`)))
         (definition d~5 `char` (truncate `char` (4 `int`)))
         (return (sign-extend `int` (b~3 `char`))))))

----- stderr -----
